creazione header , titolo e logo

--- a/airbnb2.html
+++ b/airbnb2.html
@@ -6,6 +6,14 @@
     <title>AirBnb</title>
   </head>
   <body>
+    <header>
+      <div class="container">
+        <img class="logo" src="airbnb.png">
+        <h1 class="titolo"> Benvenuti su Airbnb </h1>
+      </div>
+    </header>
+
+
    
 
   </body>
