creazione del main , foto delle destinazioni

--- a/airbnb2.html
+++ b/airbnb2.html
@@ -12,6 +12,33 @@
         <h1 class="titolo"> Benvenuti su Airbnb </h1>
       </div>
     </header>
+    <main>
+      <div class="container">
+            <div class="section uno">
+                <div class="testo">Milano</div>
+                <div class="layer"></div>
+            </div>
+
+            <div class="section due">
+                <div class="testo">Brescia</div>
+                <div class="layer"></div>
+            </div>
+      </div>
+
+      <div class="container">
+            <div class="section tre">
+                <div class="testo">Bucharest</div>
+                <div class="layer"></div>
+            </div>
+
+            <div class="section quattro">
+                <div class="testo">Giurgiu</div>
+                <div class="layer"></div>
+            </div>
+      </div>
+
+  </main>
+
 
 
    
