Aggiunti i commenti e messo in ordine il codice.

--- a/airbnb2.html
+++ b/airbnb2.html
@@ -6,46 +6,43 @@
     <title>AirBnb</title>
   </head>
   <body>
-    <header>
-      <div class="container">
-        <img class="logo" src="airbnb.png">
-        <h1 class="titolo"> Benvenuti su Airbnb </h1>
-      </div>
-    </header>
-    <main>
-      <div class="container">
-            <div class="section uno">
-                <div class="testo">Milano</div>
-                <div class="layer"></div>
+        <header>
+            <!-- nel header troviamo il logo + il benvenuto sul sito -->
+            <div class="container">
+              <img class="logo" src="airbnb.png">
+              <h1 class="titolo"> Benvenuti su Airbnb </h1>
+            </div>
+        </header>
+        <main>
+            <!-- Nel main troviamo le destinazioni -->
+            <div class="container">
+                  <div class="section uno">
+                      <div class="testo">Milano</div>
+                      <div class="layer"></div>
+                  </div>
+
+                  <div class="section due">
+                      <div class="testo">Brescia</div>
+                      <div class="layer"></div>
+                  </div>
             </div>
 
-            <div class="section due">
-                <div class="testo">Brescia</div>
-                <div class="layer"></div>
+            <div class="container">
+                  <div class="section tre">
+                      <div class="testo">Bucharest</div>
+                      <div class="layer"></div>
+                  </div>
+
+                  <div class="section quattro">
+                      <div class="testo">Giurgiu</div>
+                      <div class="layer"></div>
+                  </div>
             </div>
-      </div>
-
-      <div class="container">
-            <div class="section tre">
-                <div class="testo">Bucharest</div>
-                <div class="layer"></div>
-            </div>
-
-            <div class="section quattro">
-                <div class="testo">Giurgiu</div>
-                <div class="layer"></div>
-            </div>
-      </div>
-
-  </main>
-  <footer>
-    <div class="created">@ Created by Denis </div>
-    <a href="https://www.airbnb.it">Click per andare al vero sito !</a>
-</footer>
-
-
-
-   
-
+      </main>
+      <footer>
+          <!-- Nel footer troviamo chi ha creato il sito e il riferimento verso il vero sito -->
+          <div class="created">@ Created by Denis </div>
+          <a href="https://www.airbnb.it">Click per andare al vero sito !</a>
+      </footer>
   </body>
 </html>
